json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,126 @@
 {
  "items": [
   {
+    "id": "hV4fPFYjT9qpToeGg-NXAg",
+    "url": "https://remote.co/job/ios-developer-14/",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=26, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=18, java=0, gamedev=0, php=0, embedded=0, frontend=1}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Signal Messenger",
+      "sameAs": "https://signal.org/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 8, 2019 5:43:44 PM",
+    "validThrough": "Aug 15, 2019 5:43:44 PM",
+    "crawled": "Aug 8, 2019 6:24:55 PM",
+    "content": "<h3>iOS Developer at <span>Signal Messenger</span></h3><div><span><i></i> Remote</span>        </div><div>            <p><strong>REMOTE (US ONLY)</strong></p><p><strong>IOS</strong></p><p><strong>FULLTIME</strong></p><p>Signal is hiring iOS developers to help make private communication simple. If you care about code quality as much as you care about user privacy, you should fit right in. This role is an opportunity to have an immediate impact while working closely with a talented team to solve challenging problems and ship new features to millions of users.</p><p><strong>Requirements</strong></p><ul><li>Extensive familiarity with iOS development and internals.</li><li>Comprehensive knowledge of Swift and Objective-C.</li><li>Experience being the architect of major new enhancements.</li><li>Capable of communicating effectively. We’re a small organization; you will be involved in every aspect.</li><li><strong>Degree in Computer Science or related field.</strong></li><li>5+ years of industry experience.</li></ul><p><strong>Benefits</strong></p><ul><li><strong>You can work anywhere in the United States.</strong>&nbsp;Whether it’s your favorite coffee shop or your living room, Signal gives you the flexibility to work wherever you will be most effective. We fly somewhere new once a quarter so that everyone can meet up in person.</li><li>Excellent healthcare, vision, and dental with all premiums covered.</li><li>Our 401(k) plan matches your contributions (without any vesting period) up to the employee federal maximum of $19,000.</li><li>We’re stable, well-funded, and capable of focusing on what is best for users without distractions.</li><li>Feel good about what you do. We believe in solving real problems, working with integrity, and sharing that work (and code) with everyone.</li></ul>        </div><div>        <a href='https://jobs.lever.co/signal/5d866dff-b979-4a90-9a53-f581eee730d0' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "hTjksedbT3WboCDeJyLblg",
+    "url": "https://jobmote.com/job/57958/ios-developer-remote/",
+    "title": "iOS Developer *REMOTE*",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=30, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=46, java=0, gamedev=8, php=5, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "Matlen Silver",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 7, 2019 10:07:29 PM",
+    "validThrough": "Aug 10, 2019 10:07:29 PM",
+    "crawled": "Aug 8, 2019 3:06:25 AM",
+    "content": "<div><p>We are looking for an iOS developer responsible for the development and maintenance of applications aimed at a range of iOS devices including mobile phones and tablet computers. Your primary focus will be development of iOS applications and their integration with back-end services. You will be working alongside other engineers and developers working on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving, sophisticated design, and the creation of quality products is essential.</p> <p>Responsibilities</p> <ul><li>Design and build applications for the iOS platform</li> <li>Ensure the performance, quality, and responsiveness of applications</li> <li>Collaborate with a team to define, design, and ship new features</li> <li>Identify and correct bottlenecks and fix bugs</li> <li>Help maintain code quality, organization, and automatization</li></ul><p>Skills</p> <ul><li>Proficient with Objective-C or Swift, PHP, and Cocoa Touch</li> <li>Experience with iOS frameworks such as Core Data, Core Animation, etc.</li> <li>Experience with offline storage, threading, and performance tuning</li> <li>Familiarity with RESTful APIs to connect iOS applications to back-end services</li> <li>Knowledge of other web technologies and UI/UX standards</li> <li>Understanding of Apple s design principles and interface guidelines</li> <li>Knowledge of low-level C-based libraries is preferred</li> <li>Experience with performance and memory tuning with tools </li> <li>Familiarity with cloud message APIs and push notifications</li> <li>Knack for benchmarking and optimization</li> <li>Proficient understanding of code versioning tools </li> <li>Familiarity with continuous integration</li></ul> - provided by Dice</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "zIk_9TzMSAy4xtyZMM019w",
     "url": "https://jobmote.com/job/57703/ios-developer-freelance-remote-berlin-germany/",
     "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
