json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "0gwsRm8WS4ar53RRDgRcsw",
+    "url": "https://jobmote.com/job/58040/ios-developer-freelance-remote-berlin-germany/",
+    "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:firebase/mobile/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=22, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=19, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Darwin Recruitment",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 8, 2019 10:07:24 PM",
+    "validThrough": "Aug 11, 2019 10:07:24 PM",
+    "crawled": "Aug 9, 2019 3:06:25 AM",
+    "content": "<div><p> My customer is currently looking to hire a remote iOS Developer for 2 - 3 months, to help build their application. They are a start-up developing a B2B product for a sales platform. You need to be available for onsite onboarding in Berlin for a period of 2-3 weeks, then the position will be remote thereafter.</p> <p> Tasks &amp; Responsibilities:</p>  Help build the application, implementing new features and improving existing.  Work towards using clean code, take part in design reviews with the team.  Bug fixing and Troubleshooting after the initial phase  Work closely with UX/UI to improve design standards <p> Your Profile:</p>  Minimum 2 years' experience in iOS (Swift) Development  Good knowledge of Cocoa  Experience with Firebase</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "hV4fPFYjT9qpToeGg-NXAg",
     "url": "https://remote.co/job/ios-developer-14/",
     "title": "iOS Developer",
@@ -1794,65 +1849,6 @@
     "validThrough": "Jun 17, 2019 2:51:15 PM",
     "crawled": "Jun 10, 2019 3:06:10 PM",
     "content": "<h3> Senior iOS Engineer </h3>\n<div>\n <div>\n  <h5>Job Summary<br></h5>\n </div>\n <div></div>\n <div>\n  The Senior iOS Engineer will work remotely with the team to add new features, fix bugs, and help design the roadmap of the product.\n  <br>\n </div>\n <div>\n  <span><br></span>\n </div>\n <div></div>\n <div>\n  <h5><span>Responsibilities</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Work with remote mobile team to design and implement features</li>\n  <li>Develop automated tests for the iOS application</li>\n  <li>Fix bugs and improve performance</li>\n  <li>Participate in the definition of new mobile features and experiences<br><br></li>\n </ul>\n <div>\n  <span>Requirements</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Objective-C</li>\n  <li>Swift</li>\n  <li>iOS frameworks such as Core Data, Core Animation, as well as offline storage, threading, and performance tuning<br><br></li>\n </ul>\n <div>\n  <h5><span>Desirable Experience</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>BS degree in Computer Science or the equivalent hands-on experience</li>\n  <li>iOS mobile app deployment and management</li>\n  <li>Source Code Control (Subversion, Git)</li>\n  <li>Team player with a track record in developing high-quality software in complex technology environments</li>\n  <li>Excellent verbal and written communication skills</li>\n  <li>Experience with gathering and documenting technical requirements and specifications<br><br></li>\n </ul>\n <div>\n  <h5><span>Ideal Candidates will also have</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Experience with cross-platform mobile development frameworks</li>\n  <li>Experience with cloud-based systems such as AWS</li>\n  <li>Ability to mentor other developers and provide technical direction on application architecture</li>\n  <li>Familiarity with Software and Interoperability Techniques and Standards</li>\n  <li>Experience with responsive design techniques and tools (CSS3, Material UI, Vuetify)</li>\n  <li>Deep familiarity with software engineering best practices</li>\n  <li>Experience working in an Agile and SCRUM environment</li>\n  <li>Strong problem-solving capabilities<br><br></li>\n </ul>\n <div>\n  <span>Benefits &amp; Perks</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Full coverage health insurance</li>\n  <li>Dental</li>\n  <li>Paid Holiday</li>\n  <li>Remote work<br><br></li>\n </ul>\n <div>\n  <span>Additional Details</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Open to full-time or contract applicants</li>\n  <li>Open to international applicants (benefits may vary)</li>\n </ul>\n <div>\n  <br>\n </div>\n <div>\n  <em>Get Together Inc. is an equal opportunity employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, national origin, sex, sexual orientation, gender identity, veteran status, and disability, or other legally protected status.</em>\n </div>\n <div>\n  <br>\n </div>\n</div>\n<div>\n <h4> Related Jobs <span><a rel='nofollow'> See more Design jobs<span>→</span></a></span></h4>\n <ul>\n  <li>\n   <div></div>\n   <div>\n    <a rel='nofollow'>\n     <div></div><span>View company profile</span></a>\n   </div><a rel='nofollow'><span>Aha!</span><br><span>Visual Product Designer &lt;SaaS&gt;</span><span>featured</span><br><span>Full-Time</span><span>/</span><span>North America</span></a></li>\n </ul>\n <br>\n</div>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "Bqanz4W9Soi_m7TEn0aHXQ",
-    "url": "https://remote.co/job/senior-ios-engineer-6/",
-    "title": "Senior iOS Engineer",
-    "tags": [
-      "DBG:surround``OR(we,team,compani,member,employe,develop,engin,workmat) 2W work W remot",
-      "DBG_TECH1:k/t/w:animation/gamedev/8",
-      "DBG_TECH1:k/t/w:boost/c/8",
-      "DBG_TECH1:k/t/w:core-data/apple/8",
-      "DBG_TECH1:k/t/w:ios/apple/12",
-      "DBG_TECH1:k/t/w:ios/mobile/12",
-      "DBG_TECH1:k/t/w:objective-c/apple/3",
-      "DBG_TECH1:k/t/w:objective-c/c/2",
-      "DBG_TECH1:k/t/w:objective-c/mobile/8",
-      "DBG_TECH1:k/t/w:responsive-design/frontend/13",
-      "DBG_TECH1:k/t/w:swift/apple/10",
-      "DBG_TECH1:k/t/w:swift/mobile/16",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=10, mobile=36, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=33, java=0, gamedev=8, php=0, embedded=0, frontend=13}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "IRL",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 9, 2019 4:39:43 PM",
-    "validThrough": "Jun 16, 2019 4:39:43 PM",
-    "crawled": "Jun 9, 2019 5:08:08 PM",
-    "content": "<h3>Senior iOS Engineer at <span>IRL</span></h3>\n<div>\n <span><i></i> Remote</span> | \n <span> International </span>\n</div>\n<div> \n <h5><strong>Company Overview</strong></h5>\n <p>Imagine being part of a nimble team where your ideas and input have the potential to impact millions of lives. IRL aims to solve technology addiction by bringing people together in real life. Our goal is to help our users engage more with friends in-person to boost their overall happiness, encourage curiosity, and make the task of organizing hang outs a breeze.</p>\n <p>Our team is focused on building an intuitive social calendar that will be a ‘one stop shop’ for all your calendar, event, and planning needs while still incorporating other platforms and methods of communication. We’re looking for self-motivated engineers who have a passion for building high-quality consumer-facing applications.</p>\n <h5><strong>Job Summary</strong></h5>\n <p>The Senior iOS Engineer will work remotely with the team to add new features, fix bugs, and help design the roadmap of the product.</p>\n <h5><strong>Responsibilities</strong></h5>\n <ul>\n  <li>Work with remote mobile team to design and implement features</li>\n  <li>Develop automated tests for the iOS application</li>\n  <li>Fix bugs and improve performance</li>\n  <li>Participate in the definition of new mobile features and experiences</li>\n </ul>\n <h5><strong>Requirements</strong></h5>\n <ul>\n  <li>Objective-C</li>\n  <li>Swift</li>\n  <li>iOS frameworks such as Core Data, Core Animation, as well as offline storage, threading, and performance tuning</li>\n </ul>\n <h5><strong>Desirable Experience</strong></h5>\n <ul>\n  <li>BS degree in Computer Science or the equivalent hands-on experience</li>\n  <li>iOS mobile app deployment and management</li>\n  <li>Source Code Control (Subversion, Git)</li>\n  <li>Team player with a track record in developing high-quality software in complex technology environments</li>\n  <li>Excellent verbal and written communication skills</li>\n  <li>Experience with gathering and documenting technical requirements and specifications</li>\n </ul>\n <h5><strong>Ideal Candidates will also have</strong></h5>\n <ul>\n  <li>Experience with cross-platform mobile development frameworks</li>\n  <li>Experience with cloud-based systems such as AWS</li>\n  <li>Ability to mentor other developers and provide technical direction on application architecture</li>\n  <li>Familiarity with Software and Interoperability Techniques and Standards</li>\n  <li>Experience with responsive design techniques and tools (CSS3, Material UI, Vuetify)</li>\n  <li>Deep familiarity with software engineering best practices</li>\n  <li>Experience working in an Agile and SCRUM environment</li>\n  <li>Strong problem-solving capabilities</li>\n </ul>\n <h5><strong>Benefits &amp; Perks</strong></h5>\n <ul>\n  <li>Full coverage health insurance</li>\n  <li>Dental</li>\n  <li>Paid Holiday</li>\n  <li>Remote work</li>\n </ul>\n <h5><strong>Additional Details</strong></h5>\n <ul>\n  <li>Open to full-time or contract applicants</li>\n  <li>Open to international applicants (benefits may vary)</li>\n </ul>\n <p><em>Get Together Inc. is an equal opportunity employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, national origin, sex, sexual orientation, gender identity, veteran status, and disability, or other legally protected status.</em></p> \n</div>\n<div> \n <a href='https://irl.breezy.hr/p/31136c2daf1b-senior-ios-engineer?source=remote.co' rel='nofollow'>Apply for job</a> \n</div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
