json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "OIJtYUiKSiiVxEY8y9Jy6Q",
+    "url": "https://jobmote.com/job/59319/ios-developer-freelance-remote-berlin-germany/",
+    "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:firebase/mobile/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=22, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=19, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Darwin Recruitment",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 9, 2019 10:07:32 PM",
+    "validThrough": "Aug 12, 2019 10:07:32 PM",
+    "crawled": "Aug 10, 2019 3:06:25 AM",
+    "content": "<div><p> My customer is currently looking to hire a remote iOS Developer for 2 - 3 months, to help build their application. They are a start-up developing a B2B product for a sales platform. You need to be available for onsite onboarding in Berlin for a period of 2-3 weeks, then the position will be remote thereafter.</p> <p> Tasks &amp; Responsibilities:</p>  Help build the application, implementing new features and improving existing.  Work towards using clean code, take part in design reviews with the team.  Bug fixing and Troubleshooting after the initial phase  Work closely with UX/UI to improve design standards <p> Your Profile:</p>  Minimum 2 years' experience in iOS (Swift) Development  Good knowledge of Cocoa  Experience with Firebase</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "0gwsRm8WS4ar53RRDgRcsw",
     "url": "https://jobmote.com/job/58040/ios-developer-freelance-remote-berlin-germany/",
     "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
@@ -1791,64 +1846,6 @@
     "validThrough": "Jun 21, 2019 3:06:28 PM",
     "crawled": "Jun 14, 2019 3:06:28 PM",
     "content": "<h3><span>iOS Developer (Remote)</span> </h3> \n<h4>About this job</h4> \n<div> \n <div> \n  <div> \n   <span>Job type: </span> \n   <span>Full-time</span> \n  </div> \n  <div> \n   <span>Experience level: </span> \n   <span>Mid-Level, Senior</span> \n  </div> \n  <div> \n   <span>Role: </span> \n   <span>Mobile Developer</span> \n  </div> \n </div> \n <div> \n  <div> \n   <span>Industry: </span> \n   <span>Software Development</span> \n  </div> \n  <div> \n   <span>Company size: </span> \n   <span>51-200 people</span> \n  </div> \n  <div> \n   <span>Company type: </span> \n   <span>Private</span> \n  </div> \n </div> \n</div> \n<div>\n Company: X-Team | No office location\n <br>\n</div>\n<h4>Technologies</h4>\n<div></div>\n<div>\n ios\n</div>\n<div>\n objective-c\n</div>\n<div>\n javascript\n</div>\n<div>\n swift\n</div>\n<div>\n xcode\n</div> \n<h4>Job description</h4> \n<div>\n <p><strong>Most important:</strong></p>\n <ul>\n  <li>3+ years of experience in mobile iOS Development</li>\n  <li>Experience&nbsp;with&nbsp;Swift and Xcode</li>\n  <li>Experience with Objective-C, CSS, Javascript, HTML</li>\n  <li>Experience with JSON, XML, SOAP, REST</li>\n  <li>Experience with server side technologies (Java, NodeJS, PHP)</li>\n  <li>Experience storing and indexing data</li>\n  <li>Code optimization and performance improvements</li>\n  <li>Write well designed, testable, efficient code</li>\n </ul>\n <p><strong>Nice to have:</strong></p>\n <ul>\n  <li>Experience with working remotely</li>\n  <li>Familiar/involved with open­ source projects</li>\n </ul>\n <p><strong>Personal:</strong></p>\n <ul>\n  <li>Independent, self-motivated</li>\n  <li>Fluent in English, written and spoken</li>\n  <li>Proven track record of always learning and growing.</li>\n  <li>Proactive attitude</li>\n  <li>Possess a spirit of generosity</li>\n </ul>\n <p><strong>Perks:</strong></p>\n <ul>\n  <li>Get the chance to work with big brands like Riot Games (League of Legends), Fox Broadcasting, Kaplan Inc., Coinbase (#1 crypto exchange), BeachBody (#1 fitness company), etc.</li>\n  <li>Live and work in one of our roaming&nbsp;<a href='http://x-outpost.com/' rel='nofollow'>hacker houses</a>&nbsp;(X-Outposts) around the world.&nbsp;</li>\n  <li>Work from anywhere as part of a community of digital nomads.</li>\n  <li>Be part of the most energizing community for developers in the world by participating in our Seasons, a 3-month experience filled with challenges, rewards, games, competitions, and more, all centered around a theme that will inspire and&nbsp;<a href='https://youtu.be/Th80vOGFvUE' rel='nofollow'>energize</a>&nbsp;you.&nbsp;</li>\n  <li>Get $2,500 per year (<a href='https://x-team.com/unleash' rel='nofollow'>Unleash+</a>) to spend on doing more of what you love and staying energized. Use it on conferences, courses, video games, photography equipment, a gym membership, adventure sports, baby/pet sitting, productivity apps, restaurants, coworking, headphones, etc. #NeverStopExploring&nbsp;</li>\n </ul> \n</div> \n<div> \n <a href='https://x-team.com/remote-ios-developer-jobs/?utm_source=stackoverflow&amp;utm_medium=board' rel='nofollow'> Apply now </a>\n</div> \n<h4>About X-Team</h4> \n<div>\n <p><strong>&quot;Motivated developers, ready to join your team.&quot;</strong></p>\n <p><a href='https://x-team.com/' rel='nofollow'>X-Team</a>&nbsp;is a 100% remote international company, originally founded in Melbourne, Australia. We help companies scale their development teams by providing them with extraordinary teams of developers from around the world.</p>\n <p>We believe in living a life of freedom that allows you to spend more time getting energized by your passions. We've fostered a unique, active lifestyle and culture around this idea that continues to attract thousands of developers to apply every day. Our community is the most energizing community for developers in the world.</p>\n <p>What separates us from our competition is the level of attention and care we give our developers compared to other more &quot;talent&quot;-based solutions. We proactively support them,&nbsp;<a href='https://x-team.com/unleash/' rel='nofollow'>fund their learning</a>&nbsp;and growth, connect them in roaming&nbsp;<a href='https://x-team.com/x-outpost/' rel='nofollow'>hacker houses around the world</a>, and give them a remote environment that motivates and inspires them on a daily basis. While other companies simply place and drop their talent, we foster and cater to our unified teams of developers centered around the same beliefs, values and lifestyle.</p>\n <p>We're uniquely situated to help shape how companies grow their businesses in the digital age and aid them in being able to do so properly with the right people.</p>\n <p><strong>Who is X-Team meant for?</strong></p>\n <p>Any freelance developers with experience working on high-scale, remote teams and projects with a motivated, proactive attitude and compassionate, team-player heart. If you've worked with freelancing platforms before, that's not what we are. X-Team is a community of all likeminded people, carefully chosen to ensure we are able to create an environment of the most motivated people in the world who come together to unleash their potential. What we've created is truly special and not a faceless platform. X-Team is where developers go to feel truly at home together, while becoming more motivated and energized than they've ever been.</p> \n</div> \n<h4>Benefits</h4> \n<ul> \n <li> <span></span> <span>Get the chance to work with big brands</span> </li> \n <li> <span></span> <span>Live and work in one of our roaming hacker houses around the world</span> </li> \n <li> <span></span> <span>Work from anywhere as part of a community of digital nomads</span> </li> \n <li> <span></span> <span>Join our vibrant community</span> </li> \n <li> <span></span> <span>We provide up to $2,500 in funding for your growth &amp; wellbeing</span> </li> \n <li> <span></span> <span>Gym reimbursement</span> </li> \n</ul>",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "E3kL9KRyRcuy4DnjwcWYUg",
-    "url": "https://weworkremotely.com/remote-jobs/irl-senior-ios-engineer",
-    "title": "IRL: Senior iOS Engineer",
-    "tags": [
-      "DBG:surround``OR(we,team,compani,member,employe,develop,engin,workmat) 2W work W remot",
-      "DBG_TECH1:k/t/w:animation/gamedev/8",
-      "DBG_TECH1:k/t/w:core-data/apple/8",
-      "DBG_TECH1:k/t/w:ios/apple/12",
-      "DBG_TECH1:k/t/w:ios/mobile/12",
-      "DBG_TECH1:k/t/w:objective-c/apple/3",
-      "DBG_TECH1:k/t/w:objective-c/c/2",
-      "DBG_TECH1:k/t/w:objective-c/mobile/8",
-      "DBG_TECH1:k/t/w:responsive-design/frontend/13",
-      "DBG_TECH1:k/t/w:swift/apple/10",
-      "DBG_TECH1:k/t/w:swift/mobile/16",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=36, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=33, java=0, gamedev=8, php=0, embedded=0, frontend=13}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "Aha!Full-TimeNorth America",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false,
-      "formatted": ""
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 10, 2019 2:51:15 PM",
-    "validThrough": "Jun 17, 2019 2:51:15 PM",
-    "crawled": "Jun 10, 2019 3:06:10 PM",
-    "content": "<h3> Senior iOS Engineer </h3>\n<div>\n <div>\n  <h5>Job Summary<br></h5>\n </div>\n <div></div>\n <div>\n  The Senior iOS Engineer will work remotely with the team to add new features, fix bugs, and help design the roadmap of the product.\n  <br>\n </div>\n <div>\n  <span><br></span>\n </div>\n <div></div>\n <div>\n  <h5><span>Responsibilities</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Work with remote mobile team to design and implement features</li>\n  <li>Develop automated tests for the iOS application</li>\n  <li>Fix bugs and improve performance</li>\n  <li>Participate in the definition of new mobile features and experiences<br><br></li>\n </ul>\n <div>\n  <span>Requirements</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Objective-C</li>\n  <li>Swift</li>\n  <li>iOS frameworks such as Core Data, Core Animation, as well as offline storage, threading, and performance tuning<br><br></li>\n </ul>\n <div>\n  <h5><span>Desirable Experience</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>BS degree in Computer Science or the equivalent hands-on experience</li>\n  <li>iOS mobile app deployment and management</li>\n  <li>Source Code Control (Subversion, Git)</li>\n  <li>Team player with a track record in developing high-quality software in complex technology environments</li>\n  <li>Excellent verbal and written communication skills</li>\n  <li>Experience with gathering and documenting technical requirements and specifications<br><br></li>\n </ul>\n <div>\n  <h5><span>Ideal Candidates will also have</span></h5>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Experience with cross-platform mobile development frameworks</li>\n  <li>Experience with cloud-based systems such as AWS</li>\n  <li>Ability to mentor other developers and provide technical direction on application architecture</li>\n  <li>Familiarity with Software and Interoperability Techniques and Standards</li>\n  <li>Experience with responsive design techniques and tools (CSS3, Material UI, Vuetify)</li>\n  <li>Deep familiarity with software engineering best practices</li>\n  <li>Experience working in an Agile and SCRUM environment</li>\n  <li>Strong problem-solving capabilities<br><br></li>\n </ul>\n <div>\n  <span>Benefits &amp; Perks</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Full coverage health insurance</li>\n  <li>Dental</li>\n  <li>Paid Holiday</li>\n  <li>Remote work<br><br></li>\n </ul>\n <div>\n  <span>Additional Details</span>\n </div>\n <div>\n  <br>\n </div>\n <ul>\n  <li>Open to full-time or contract applicants</li>\n  <li>Open to international applicants (benefits may vary)</li>\n </ul>\n <div>\n  <br>\n </div>\n <div>\n  <em>Get Together Inc. is an equal opportunity employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, national origin, sex, sexual orientation, gender identity, veteran status, and disability, or other legally protected status.</em>\n </div>\n <div>\n  <br>\n </div>\n</div>\n<div>\n <h4> Related Jobs <span><a rel='nofollow'> See more Design jobs<span>→</span></a></span></h4>\n <ul>\n  <li>\n   <div></div>\n   <div>\n    <a rel='nofollow'>\n     <div></div><span>View company profile</span></a>\n   </div><a rel='nofollow'><span>Aha!</span><br><span>Visual Product Designer &lt;SaaS&gt;</span><span>featured</span><br><span>Full-Time</span><span>/</span><span>North America</span></a></li>\n </ul>\n <br>\n</div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
